plugins/formal-verification/testData/diagnostics/no_contracts/scope_functions.kt
// NEVER_VALIDATE

fun <!VIPER_TEXT!>useRun<!>() {
    val x: Int
    run {
        x = 0
    }
}
